[Add]客側作成開始/ログイン権限設定/enumの設定

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -205,3 +205,10 @@ ja:
       long: "%Y/%m/%d %H:%M"
       short: "%m/%d %H:%M"
     pm: 午後
+
+ja:  # 日本語の設定を行う
+  enums: # enumの設定を行う
+    order: # モデル名（Orderモデルに対して）
+      payment_method: # カラム名（payment_methodカラムに対して）
+        credit_card: "クレジットカード"
+        transfer: "銀行振込"
