--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -212,3 +212,9 @@ ja:  # 日本語の設定を行う
       payment_method: # カラム名（payment_methodカラムに対して）
         credit_card: "クレジットカード"
         transfer: "銀行振込"
+      order_status:
+        waiting_for_deposit: "入金待ち"
+        payment_confirmation: "入金確認"
+        making: "制作中"
+        ready_to_ship: "発送準備中"
+        sent: "発送済み"
